<resources>

    <!--    Maps Api Key-->
    <string name="google_maps_api_key">AIzaSyBffr3xN2gx53jUmunyVO2S1BQxtk2S5VM</string>

    <string name="app_name">TravelMate</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up">Sign up</string>
    <string name="travel">Travel</string>
    <string name="mate">Mate</string>
    <string name="motto">Let our adventure begin.</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="wellcome_back">Welcome back,</string>
    <string name="mate_lowercase">mate!</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="how_should_we_call">How should we call</string>
    <string name="you">you?</string>
    <string name="register">Register</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_matching_passwords">Your password does not match the confirmation password</string>
    <string name="no_empty_fields">Sorry! Fields can not be empty</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="social">SOCIAL</string>
    <string name="cultural">CULTURAL</string>
    <string name="recreational">RECREATIONAL</string>
    <string name="fun">FUN</string>
    <string name="food">FOOD</string>
    <string name="accommodation">ACCOMMODATION</string>
    <string name="please_tell_us_what_this_location_is_actually_about">Please tell us what this location is all about!</string>
    <string name="cafe">CAFE</string>
    <string name="bar">BAR</string>
    <string name="description">Description...</string>
    <string name="publish">Publish</string>
    <string name="select_one_tag">Please select atleast one tag</string>
    <string name="details">Details</string>
    <string name="add_to_journey">Add to journey</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Journeys</string>
    <string name="tab_text_2">Favorites</string>
    <string name="tab_text_3">Uploads</string>
    <string name="tab_text_4">Visited</string>
    <string name="feeling_adventurous_yet">Feeling adventurous yet?</string>
    <string name="hi">Hi</string>
    <string name="give_it_a_name">Give it a name</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="we_hope_you_re_excited_about_your_new_journey">We hope you\'re excited about your new journey!</string>
    <string name="add_journey">AddJourney</string>
    <string name="we_sure_are">We sure are!</string>
    <string name="current">Current</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="start_journey">Start journey</string>
    <string name="mark_as_complete">Mark as complete</string>
    <string name="dash">-</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="select_the_journey_below">Select the journey below</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="menu_button">Menu Button</string>
    <string name="search_your_friend_by_username">Search your friend by username</string>
    <string name="search">Search</string>
    <string name="no_user_with_that_username_was_found">No user with that username was found</string>
    <string name="username">Username</string>
    <string name="you_have_an_invitation_to_join">You have an invitation to join</string>
    <string name="accept">Accept</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="send">Send</string>
    <string name="sorry_there_are_no_comments_yet">Sorry, there are no comments yet!</string>
    <string name="complete_journey">Complete Journey</string>
    <string name="complete">Complete</string>
    <string name="recent">Recent</string>
    <string name="trending">Trending</string>
    <string name="confirm_location">Confirm location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
