<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.travelmate.ui.dashboard.DashboardFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add_attraction"
        android:name="com.example.travelmate.ui.addAttraction.AddAttractionFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_add_attraction" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.travelmate.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>