<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="registerViewModel"
            type="com.example.travelmate.ui.account.register.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainBackground"
            android:orientation="vertical"
            tools:context=".ui.account.login.LoginActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/clouds"
                    android:layout_width="387dp"
                    android:layout_height="269dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/clowds"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/wbId"
                    style="@style/LogoText"
                    android:layout_marginStart="@dimen/large_margin_padding"
                    android:layout_marginTop="100dp"
                    android:alpha="0.0"
                    android:fontFamily="@font/sarabun_bold"
                    android:text="@string/how_should_we_call"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/mateId"
                    style="@style/LogoText"
                    android:layout_below="@+id/wbId"
                    android:layout_marginStart="@dimen/large_margin_padding"
                    android:alpha="0.0"
                    android:text="@string/you"
                    android:textColor="@android:color/black" />

            </RelativeLayout>


            <TextView
                style="@style/MainText"
                android:layout_marginStart="@dimen/large_margin_padding"
                android:text="@string/register"
                android:textSize="@dimen/large_text_size" />


            <EditText
                style="@style/MainText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_margin_padding"
                android:layout_marginStart="@dimen/large_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:layout_marginEnd="@dimen/large_margin_padding"
                android:autofillHints="@string/no_empty_fields"
                android:background="@drawable/rounded_bg"
                android:hint="@string/nickname"
                android:inputType="text"
                android:paddingStart="@dimen/default_margin_padding"
                android:text="@={registerViewModel.nickname}"
                android:textColorHint="@color/mainTextColor"
                tools:ignore="RtlSymmetry" />

            <EditText
                style="@style/MainText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_margin_padding"
                android:layout_marginStart="@dimen/large_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:layout_marginEnd="@dimen/large_margin_padding"
                android:autofillHints="@string/no_empty_fields"
                android:background="@drawable/rounded_bg"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingStart="@dimen/default_margin_padding"
                android:text="@={registerViewModel.username}"
                android:textColorHint="@color/mainTextColor"
                tools:ignore="RtlSymmetry" />


            <EditText
                style="@style/MainText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_margin_padding"
                android:layout_marginStart="@dimen/large_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:layout_marginEnd="@dimen/large_margin_padding"
                android:autofillHints="@string/no_empty_fields"
                android:background="@drawable/rounded_bg"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingStart="@dimen/default_margin_padding"
                android:text="@={registerViewModel.email}"
                android:textColorHint="@color/mainTextColor"
                tools:ignore="RtlSymmetry" />

            <EditText
                style="@style/MainText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_margin_padding"
                android:layout_marginStart="@dimen/large_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:layout_marginEnd="@dimen/large_margin_padding"
                android:autofillHints="@string/no_empty_fields"
                android:background="@drawable/rounded_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/default_margin_padding"
                android:text="@={registerViewModel.password}"
                android:textColorHint="@color/mainTextColor"
                tools:ignore="RtlSymmetry" />

            <EditText
                style="@style/MainText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_margin_padding"
                android:layout_marginStart="@dimen/large_margin_padding"
                android:layout_marginTop="@dimen/default_margin_padding"
                android:layout_marginEnd="@dimen/large_margin_padding"
                android:autofillHints="@string/no_empty_fields"
                android:background="@drawable/rounded_bg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="@dimen/default_margin_padding"
                android:text="@={registerViewModel.confirmPassword}"
                android:textColorHint="@color/mainTextColor"
                tools:ignore="RtlSymmetry" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_gravity="bottom"
                    android:id="@+id/planeId"
                    android:layout_width="0dp"
                    android:layout_height="119dp"
                    android:layout_weight="1"
                    android:alpha="1.0"
                    android:background="@drawable/plane_no_loop"
                    android:contentDescription="@null" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/large_margin_padding"
                    android:background="@drawable/ic_navigate_next"
                    android:contentDescription="@null"
                    app:onSingleClick="@{() -> registerViewModel.registerUser()}" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>