<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.travelmate.ui.profile.journeys.shareJourney.ShareJourneyViewModel" />

        <variable
            name="userName"
            type="String" />

        <variable
            name="isFound"
            type="Boolean" />

        <variable
            name="notFound"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBackground"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/default_margin_padding"
        tools:context=".ui.profile.journeys.shareJourney.ShareJourneyDialogFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                style="@style/MainText"
                android:layout_width="0dp"
                android:layout_height="@dimen/large_margin_padding"
                android:layout_weight="1"
                android:autofillHints="@string/no_empty_fields"
                android:background="@drawable/rounded_bg"
                android:hint="@string/search_your_friend_by_username"
                android:inputType="text"
                android:paddingStart="@dimen/small_margin_padding"
                android:paddingEnd="@dimen/small_margin_padding"
                android:text="@={viewModel.userName}"
                android:textColorHint="@color/mainTextColor" />

            <ImageView
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/small_margin_padding"
                android:background="@drawable/ic_search"
                android:contentDescription="@string/search" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="@dimen/default_margin_padding"
            android:layout_marginEnd="2dp"
            android:clickable="true"
            android:paddingBottom="5dp"
            app:cardBackgroundColor="@color/mainBackground"
            app:cardCornerRadius="@dimen/default_margin_padding"
            app:visibilityView="@{isFound}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    style="@style/MainText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/default_margin_padding"
                    android:layout_weight="1"
                    android:text="@{userName}" />

                <ImageView
                    android:id="@+id/sendBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/default_margin_padding"
                    android:background="@drawable/ic_send" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/MainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_padding"
            android:text="@string/no_user_with_that_username_was_found"
            android:textAlignment="center"
            app:visibilityView="@{notFound}" />
    </LinearLayout>
</layout>